; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/src/extr_pt_ild.c_pti_get_nominal_easz_non64.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/src/extr_pt_ild.c_pti_get_nominal_easz_non64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pt_ild = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64 }

@ptem_16bit = common dso_local global i32 0, align 4
@ptem_32bit = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pt_ild*)* @pti_get_nominal_easz_non64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pti_get_nominal_easz_non64(%struct.pt_ild* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.pt_ild*, align 8
  store %struct.pt_ild* %0, %struct.pt_ild** %3, align 8
  %4 = load %struct.pt_ild*, %struct.pt_ild** %3, align 8
  %5 = call i64 @mode_32b(%struct.pt_ild* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %18

7:                                                ; preds = %1
  %8 = load %struct.pt_ild*, %struct.pt_ild** %3, align 8
  %9 = getelementptr inbounds %struct.pt_ild, %struct.pt_ild* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %7
  %15 = load i32, i32* @ptem_16bit, align 4
  store i32 %15, i32* %2, align 4
  br label %29

16:                                               ; preds = %7
  %17 = load i32, i32* @ptem_32bit, align 4
  store i32 %17, i32* %2, align 4
  br label %29

18:                                               ; preds = %1
  %19 = load %struct.pt_ild*, %struct.pt_ild** %3, align 8
  %20 = getelementptr inbounds %struct.pt_ild, %struct.pt_ild* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %18
  %26 = load i32, i32* @ptem_32bit, align 4
  store i32 %26, i32* %2, align 4
  br label %29

27:                                               ; preds = %18
  %28 = load i32, i32* @ptem_16bit, align 4
  store i32 %28, i32* %2, align 4
  br label %29

29:                                               ; preds = %27, %25, %16, %14
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local i64 @mode_32b(%struct.pt_ild*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
